--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                 <a href="#">Privacy</a>.
                 <a href="#">Terms</a>
             </p>
-            <p class="float-right"><a href="index.html">Back to top</a></p>
+            <p class="float-right"><a href="/Digital-Calculator/index.html">Back to top</a></p>
         </div>
     </footer>
 
