--- a/scientific-Calcii.html
+++ b/scientific-Calcii.html
@@ -236,7 +236,7 @@
                 <a href="#">Privacy</a>.
                 <a href="#">Terms</a>
             </p>
-            <p class="float-right"><a href="scientific-Calcii.html">Back to top</a></p>
+            <p class="float-right"><a href="/Digital-Calculator/scientific-Calcii.html">Back to top</a></p>
         </div>
     </footer>
 
